feat: update swagger docs with authorize function
