# pkg/api/router.go
@@ -14,8 +14,12 @@ import (
 	"sgf-meetup-api/pkg/api/groupevents"
 )
 
-//	@title		SGF Meetup API
-//	@version	1.0
+//	@title						SGF Meetup API
+//	@version					1.0
+//	@securityDefinitions.apikey	BearerAuth
+//	@in							header
+//	@name						Authorization
+//	@description				Type "Bearer" followed by a space and the JWT token.
 
 func NewRouter(
 	logger *slog.Logger,
